--- a/src/main/resources/properties/db.properties
+++ b/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/feiras-sp
 spring.datasource.username=root
 spring.datasource.password=feiras-sp
