Finalizando script de inicialização de construção e inserção de dados. Closes #2

--- a/src/main/resources/properties/db.properties
+++ b/src/main/resources/properties/db.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/feiras-sp
 spring.datasource.username=root
 spring.datasource.password=feiras-sp
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.open-in-view=false
 #spring.jpa.show-sql: true
